// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Invoice Template Tests creates an invoice template for a member 1`] = `
{
  "client_id": 123456,
}
`;

exports[`Invoice Template Tests creates an invoice template with zero late fee for a member 1`] = `
{
  "client_id": 123456,
  "overdue_charge_percent": 0,
}
`;
